--- a/10_creative-button-swapping-layers/style.css
+++ b/10_creative-button-swapping-layers/style.css
@@ -3,18 +3,18 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: white;
+  background-color: none;
 }
 
 .btn {
-  border: none;
-  background: #f1c40f;
-  color: white;
   padding: 20px 40px;
-  font-size: 25px;
   text-transform: uppercase;
-  cursor: pointer;
-  transition: all 0.5s;
+  text-decoration: none;
+  letter-spacing: 4px;
+  color: transparent;
+  background: none;
+  border: 3px solid #ff0;
+  font-size: 30px;
   position: relative;
 }
 
@@ -23,15 +23,13 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
   height: 100%;
-  color: white;
-  background: #2ce771;
+  width: 100%;
+  background: #363636;
+  color: #ff0;
   display: flex;
   justify-content: center;
   align-items: center;
-  transform: rotateX(270deg);
-  transform-origin: top;
   transition: all 0.5s;
 }
 
@@ -39,21 +37,27 @@ body {
   content: 'button';
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100%;
+  left: -100%;
   height: 100%;
-  color: white;
-  background: red;
+  width: 100%;
+  background: #363636;
+  color: #ff0;
   display: flex;
   justify-content: center;
   align-items: center;
-  transform: rotateX(270deg);
-  transform-origin: top;
   transition: all 0.5s;
-  transition-delay: 0.25s;
+  transform: scale(0) rotateY(0deg);
+  opacity: 0;
 }
 
-.btn:hover:before,
-.btn:hover::after {
-  transform: rotateX(0deg);
+.btn:hover:before {
+  left: 100%;
+  transform: scale(0) rotateY(360deg);
+  opacity: 0;
+}
+
+.btn:hover:after {
+  left: 0;
+  transform: scale(1) rotateY(360deg);
+  opacity: 1;
 }
